2009-10-22 Braden McDaniel  <braden@endoframe.com>

	Prefer JRE_HOME to locate libjvm rather than JAVA_HOME.

	* configure.ac: Use JRE_HOME instead of JAVA_HOME.
	* src/Makefile.am (script_java_la_CPPFLAGS): Define JRE_HOME
	instead of JAVA_HOME.
	* src/script/java.cpp
	(prepend_jre_home_libdirs_to_searchpath(const std::string &)):
	Changed function name.
	(load_libjvm::load_libjvm()): First check JRE_HOME; then use
	JAVA_HOME if JRE_HOME isn't set.

2009-10-19 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/collision.cpp
	(collision_node::do_modified() const): Call do_modified to avoid
	recursion.

2009-10-19 Braden McDaniel  <braden@endoframe.com>

	Fixes for building against Boost 1.40.0.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/local/uri.cpp
	* src/libopenvrml/openvrml/local/externproto.cpp
	* src/libopenvrml/openvrml/scene.cpp
	* src/local/libopenvrml-control/openvrml_control/browser.h
	* src/node/vrml97/inline.cpp
	* src/node/x3d-nurbs/nurbs_trimmed_surface.cpp
	* src/openvrml-xembed/main.cpp

2009-10-18 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-xembed/main.cpp
	(openvrml_xembed_name_owner_changed(DBusGProxy *, const gchar *,
	const gchar *, const gchar *, gpointer)): Only print out debugging
	message if we actually erased any references.

2009-10-18 Braden McDaniel  <braden@endoframe.com>

	Make throw_runtime_error_from_win32_system_error available to
	other translation units.

	* src/Makefile.am (libopenvrml_libopenvrml_la_SOURCES): Added
	libopenvrml/openvrml/local/error.{cpp,h}.
	* src/libopenvrml/openvrml/local/conf.cpp
	* src/libopenvrml/openvrml/local/error.cpp
	* src/libopenvrml/openvrml/local/error.h

2009-10-05 Braden McDaniel  <braden@endoframe.com>

	* Makefile.am (VISUALC9_0_FILES): Added openvrml-dl.vcproj to the
	distribution.

2009-08-13 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.3 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile